--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@storybook/react": "^6.4.22",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
-    "styled-components": "^5.3.5",
-    "@storybook/react": "^6.4.22"
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
