--- a/server/package.json
+++ b/server/package.json
@@ -17,9 +17,7 @@
     "express": "^4.18.1",
     "express-formidable": "^1.2.0",
     "mongoose": "^6.3.3",
-    "nodemon": "^2.0.16"
-  },
-  "devDependencies": {
+    "nodemon": "^2.0.16",
     "@faker-js/faker": "^6.3.1"
-  }
+  },
 }
