--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "axios": "^0.27.2",
     "bson": "^4.6.3",
     "react": "^18.0.0",
+    "@faker-js/faker": "^6.3.1",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
+
     "@storybook/addon-actions": "^6.4.22",
     "@storybook/addon-essentials": "^6.4.22",
     "@storybook/addon-interactions": "^6.4.22",
