feat(front): Add React Redux base config

--- a/package.json
+++ b/package.json
@@ -11,18 +11,19 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@faker-js/faker": "^6.3.1",
+    "@reduxjs/toolkit": "^1.8.1",
     "@storybook/react": "^6.4.22",
     "axios": "^0.27.2",
     "bson": "^4.6.3",
     "react": "^18.0.0",
-    "@faker-js/faker": "^6.3.1",
     "react-dom": "^18.0.0",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
-
     "@storybook/addon-actions": "^6.4.22",
     "@storybook/addon-essentials": "^6.4.22",
     "@storybook/addon-interactions": "^6.4.22",
