--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bson": "^4.6.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-query": "^3.39.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.5"
